--- a/wodev/src/Login/RestorePassword.scss
+++ b/wodev/src/Login/RestorePassword.scss
@@ -1,9 +1,38 @@
-.centerRestore {
+
+@media (max-width: 1000px) {
+    .centerRestore {
+        display: flex;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+        width: 85vw;
+        margin: auto;
+        margin-top: 10vh;
+    }
+        
+}
+
+@media (min-width: 1001px) {
+    .centerRestore {
+        display: flex;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+        width: 40vw;
+        margin: auto;
+        margin-top: 10vh;
+    }
+        
+}
+
+h3 {
+    width: 90vw;
+    text-align: center;
+}
+
+.horizontalGroup{
     display: flex;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    width: 30vw;
-    margin: auto;
-    margin-top: 10vh;
+    width: 100%;
+    justify-content: center;
+    margin-top: 20px;
 }
