--- a/wodev/src/Login/RestorePassword.scss
+++ b/wodev/src/Login/RestorePassword.scss
@@ -1,9 +1,9 @@
 
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
     .centerRestore {
         display: flex;
         align-items: center;
-        height: 100vh;
+        height: 100%;
         flex-direction: column;
         width: 85vw;
         margin: auto;
@@ -12,11 +12,11 @@
         
 }
 
-@media (min-width: 1001px) {
+@media (min-width: 801px) {
     .centerRestore {
         display: flex;
         align-items: center;
-        height: 100vh;
+        height: 100%;
         flex-direction: column;
         width: 40vw;
         margin: auto;
